# Hivra-network

./: .gitignore  CHANGELOG.md  README.md  cli.py  cli_old.py  demo.py  demo_final.py  pyproject.toml  requirements.txt  setup.py  simple_demo.py  simple_demo_fixed.py  spec_inspection.py  test_import.py  test_imports_fixed.py  test_new_events.py  test_simple_import.py  working_demo.py
docs/: specification.md
src/: cli.py
src/coordinator/: event_bus.py
src/core/: __init__.py  capsule.py  ledger.py  starter.py  state.py
src/events/: __init__.py  actions.py  base.py  base_fixed.py  base_simple.py  confirm.py  factories.py  invitation.py  link_intent.py  simple_events.py
src/modules/: invitation.py  trust.py
tests/: test_cli.py  test_ledger_state.py
tests/integration/: test_core_integration.py
tests/unit/: test_auto_trust.py  test_capsule.py  test_event_bus.py  test_events.py  test_invitation_module.py  test_starter.py  test_trust_module.py
