[project]
name = "hivra-capsulenet"
version = "1.0.0"
description = "Distributed capsule architecture for trusted connections"
readme = "README.md"
authors = [
    {name = "Hivra Network"},
]
license = {text = "MIT"}
requires-python = ">=3.8"

[project.scripts]
capsulenet = "cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
